--- a/messaging-platform/src/App.css
+++ b/messaging-platform/src/App.css
@@ -13,8 +13,14 @@
   }
 }
 
+.invalid-field-message {
+  font-size: 12px;
+  text-align: left;
+  color: #f44336;
+}
+
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
