--- a/messaging-platform/src/views/Authorization/Register/Register.scss
+++ b/messaging-platform/src/views/Authorization/Register/Register.scss
@@ -3,6 +3,7 @@
 .register-wrapper {
     display: block;
     justify-content: center;
+    text-align: center;
     flex-direction: column;
     position: absolute;
     top: 70%;
@@ -30,7 +31,6 @@
 
     .header-wrapper {
         position: relative;
-        //top: 100%;
     }
 
     .register-subtitle-wrapper {
