--- a/messaging-platform/src/views/User/UserList.scss
+++ b/messaging-platform/src/views/User/UserList.scss
@@ -1,9 +1,9 @@
 .userList {
     width: calc(100% / 5);
     display: flex;
+    height: 100%;
+    position: absolute;
     flex-direction: column;
-    border: 1px black;
-    margin: 20px;
     font-size: 16px;
     font-size: inherit;
     font-size: 1vw;
