ddz bate moje i greshki da ima

--- a/messaging-platform/src/views/User/UserDetails/UserDetails.scss
+++ b/messaging-platform/src/views/User/UserDetails/UserDetails.scss
@@ -3,6 +3,7 @@
     background-color: rgb(54, 53, 58);
     width: calc(100% / 5);
     position: absolute;
+    top: 60px;
     right: 0px;
     display: flex;
     flex-direction: column;
