Add frontend for picture upload, usergroups

--- a/messaging-platform/src/views/User/UserList.scss
+++ b/messaging-platform/src/views/User/UserList.scss
@@ -8,3 +8,10 @@
     font-size: inherit;
     font-size: 1vw;
 }
+
+.list-group{
+    max-height: 500px;
+    margin-bottom: 10px;
+    overflow:scroll;
+    -webkit-overflow-scrolling: touch;
+}
