--- a/messaging-platform/src/views/ChatRoom/ChatField/ChatField.scss
+++ b/messaging-platform/src/views/ChatRoom/ChatField/ChatField.scss
@@ -1,8 +1,80 @@
+@import "style.scss";
+
 .chat-field {
+    overflow: hidden;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
     .chat-field-container {
         width: 100%;
+    }
+}
+
+.chat-input {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .text-field{
+        width: 100%;
+        border: red solid 1px;
+    }
+}
+
+.message.me {
+    display: flex; 
+    justify-content: flex-end;
+    margin-bottom: 10px;
+    margin-right: 20px;
+
+    .message-body {
+        background-color: $primary-blue;
+        border-radius: 20px;
+        margin-left: 5px;
+        color: white;
+        padding: 3px 5px;
+        max-width: 50%;
+    }
+
+    .username {
+        color: $grey-lighter;
+        font-size: 10px;
+    }
+}
+
+.message.other {
+    display: flex; 
+    justify-content: flex-start;
+    margin-bottom: 10px;
+    margin-left: 20px;
+
+    .message-body {
+        display:table-header-group;
+        background-color: $grey-background;
+        border-radius: 20px;
+        margin-right: 5px;
+        color: black;
+        padding: 3px 5px;
+        max-width: 50%;
+    }
+
+    .username {
+        display:table-footer-group;
+        color: $grey-lighter;
+        font-size: 10px;
+    }
+}
+
+.message.admin {
+    display: flex; 
+    justify-content: center;
+    margin-bottom: 10px;
+
+    .message-body {
+        border-radius: 20px;
+        margin-left: 5px;
+        color: $grey-lighter;
+        padding: 3px 5px;
+        font-size: 15px;
+        max-width: 50%;
     }
 }
