--- a/messaging-platform/src/views/User/UserGroups.scss
+++ b/messaging-platform/src/views/User/UserGroups.scss
@@ -1,7 +1,8 @@
 
-.user-groups {
+/*.user-groups {
     .add-user-groups-button {
         margin-left: 20px;
         margin-bottom: 20px;
     }
-}
+}*/
+
