--- a/messaging-platform/src/views/User/UserList.scss
+++ b/messaging-platform/src/views/User/UserList.scss
@@ -7,11 +7,10 @@
     font-size: 16px;
     font-size: inherit;
     font-size: 1vw;
-}
-
-.list-group{
-    max-height: 500px;
-    margin-bottom: 10px;
-    overflow:scroll;
-    -webkit-overflow-scrolling: touch;
+    /*.list-group{
+        max-height: 500px;
+        margin-bottom: 10px;
+        overflow:scroll;
+        -webkit-overflow-scrolling: touch;
+    }*/
 }
